# work_report_maker

./: .gitignore  README.md  main.py  pyproject.toml
.github/prompts/: plan-guiPhotoRefactor.prompt.md  plan-guiProjectSaveDelete.prompt.md  plan-guiResponsibilityClarification.prompt.md  plan-guiSourceSelfDocumentation.prompt.md  plan-jpegReportTemplate.prompt.md  plan-lightweightWizardStub.prompt.md  plan-overviewFormPage.prompt.md  plan-pdfGenerationModalLock.prompt.md  plan-pdfSuccessExitPreference.prompt.md  plan-photoArrangePageUpdates.prompt.md  plan-photoDescriptionEditing.prompt.md  plan-photoImportArrangeWizard.prompt.md  plan-pySide6CoverFormGui.prompt.md  plan-rawJsonAdapterMigration.prompt.md  plan-reportBuildHelper.prompt.md  plan-workReportMaker.prompt.md
Documentation/: gui_responsibility_clarification.md  photo_import_arrange_design.md
Documentation/geminiChats/: _PDF写真枠のアスペクト比を4_3に固定 .md  _WeasyPrintのPython環境構築ガイド .md
backend/: report_adapter.py
data/: raw_report.json  report.json
src/work_report_maker/: __main__.py  config.py
src/work_report_maker/gui/: main_window.py  preset_manager.py  project_store.py  report_build_helper.py  report_generation_operation.py  wizard_contexts.py
src/work_report_maker/models/: loader.py  (+1 more)
templates/: report_tmp.css  report_tmp.html
tests/: test_main.py
tests/gui/: test_photo_arrange_logic.py  test_photo_arrange_page.py  test_photo_description_helpers.py  test_photo_description_page.py  test_photo_import_page.py  test_report_wizard_integration.py  wizard_stubs.py
tests/services/: test_pdf_generator.py
(+22 files in other folders)
